--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -1,24 +1,19 @@
-<!--templates/start_page.html-->
+<!-- templates/start_page.html -->
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Start Page</title>
-    </head>
+{% extends "base.html" %}
 
-    <body>
-        {% if message %}
-            <p>{{ message }}</p>
-        {% endif %}
+{% block title %}
+    {{ title }}
+{% endblock %}
 
-        <h1>Enter amount of Employees you want to generate:</h1>
+{% block content %}
+    <h1>Enter amount of Employees you want to generate:</h1>
 
-        <form method="post">
-            {% csrf_token %}
-            <label for="quantity">Quantity (between 1 and 100):</label>
-            <input type="number" id="quantity" name="quantity" min="1" max="100">
-            <br><br>
-            <input type="submit" name="action" value="Submit">
-        </form>
-    </body>
-</html>
+    <form method="post">
+        {% csrf_token %}
+        <label for="quantity">Quantity (between 1 and 100):</label>
+        <input type="number" id="quantity" name="quantity" min="1" max="100">
+        <br><br>
+        <input type="submit" name="action" value="Submit">
+    </form>
+{% endblock %}
